--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		</div>
 		<p class="text-on-white attribution">Powered by<img class="third-party-app" src='./images/weatherapi_logo.png' alt="Weather data by WeatherAPI.com"/></p>
 	</main>
-	<script src="./app.js" type="module" ></script> 
+	<script src="./script.js" type="module" ></script> 
 	<script src="./weatherApp.js" type="module"></script>
 
 </body>
