--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p class="error-message-for-search text-on-white hide">Enter a valid city or country</p>
 				
 			</div>		
-			<button class="search-btn" onclick="search()"><p>Search</p></button>
+			<button class="search-btn"><p>Search</p></button>
 			<p class="text-on-white small-text">Location entered should be a valid city or country.</p>
 			<button class="unbutton text-on-white use-current-location">Use current location</button>
 			
