--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="./images/favicon.png" />
-	<link href="./styles/styles.css" rel="stylesheet" type="text/css">
+	<link href="./styles/styles.css" rel="preload" as="style">
+	<link href="./styles/root.css" rel="preload" as="style">
+	<link href="./styles/styles.css" rel="stylesheet">
+	<link href="./script.js" rel="preload" as="script" crossorigin>
+	<link href="./weatherApp.js" rel="preload" as="script" crossorigin>
+	<link href="./images/weather-background.svg" rel="preload" as="image">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 	<title>Weather Now</title>
@@ -105,8 +111,8 @@
 		</div>
 		<p class="text-on-white attribution">Powered by<img class="third-party-app" src='./images/weatherapi_logo.png' alt="Weather data by WeatherAPI.com"/></p>
 	</main>
-	<script src="./script.js" type="module" ></script> 
-	<script src="./weatherApp.js" type="module"></script>
+	<script defer src="./script.js" type="module" ></script> 
+	<script defer src="./weatherApp.js" type="module"></script>
 
 </body>
 </html>
