updated UI for res design

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 							<div class="detail-view-holder">
 								<div class="detail-view left">
 									<p style="margin-bottom: 5px;">Chance of rain : <span class="make-font-clear chance-of-rain"></span></p>
-									<p style="margin-bottom: 5px;">Sunrise | Sunset : <span class="make-font-clear sunrise"></span> | <span class="make-font-clear sunset"></span></p>
-									<p style="margin-bottom: 5px;">Moonrise | Moonset : <span class="make-font-clear moonrise"></span> | <span class="make-font-clear moonset"></span></p>
+									<p style="margin-bottom: 5px;">Sunrise | Sunset : <br><span class="make-font-clear sunrise"></span> | <span class="make-font-clear sunset"></span></p>
+									<p style="margin-bottom: 5px;">Moonrise | Moonset : <br><span class="make-font-clear moonrise"></span> | <span class="make-font-clear moonset"></span></p>
 								</div>
 								<div class="detail-view right">
-									<p class="text-spacing values-section" style="margin-bottom: 5px;"><i class="fa-solid fa-droplet icons-breathe"></i>Precipitation: <span class="precipitation make-font-clear">--</span></p>
-									<p class="text-spacing values-section" style="margin-bottom: 5px;"><span><img style="position:relative; top:5px; margin-right:2px;" src="./images/wind.svg" width="20px"></span>Wind: <span class="wind-speed make-font-clear">--</span></p>
-									<p class="text-spacing values-section" style="margin-bottom: 5px;"><span><img  style="position:relative; top:5px; margin-right:2px;" src="./images/humidity.svg" width="20px"></span></i>Humidity: <span class="humidity make-font-clear">--</span></p>
+									<p class="text-spacing values-section" style="margin-bottom: 5px;"><i class="fa-solid fa-droplet icons-breathe"></i>Precipitation: <br><span class="precipitation make-font-clear">--</span></p>
+									<p class="text-spacing values-section" style="margin-bottom: 5px;"><span><img style="position:relative; top:5px; margin-right:2px;" src="./images/wind.svg" width="20px"></span>Wind: <br><span class="wind-speed make-font-clear">--</span></p>
+									<p class="text-spacing values-section" style="margin-bottom: 5px;"><span><img  style="position:relative; top:5px; margin-right:2px;" src="./images/humidity.svg" width="20px"></span></i>Humidity: <br><span class="humidity make-font-clear">--</span></p>
 								</div>
 							</div>
 
